outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-05-25/evaluations/problem_eval-2541205234698542328_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the nearest node in such cases. The key parameters are the current and destination nodes, unvisited nodes, and distance matrix, with the heuristic's logic embedded in the conditional choice between nearest and farthest nodes.}
                                                                                                                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the nearest node in such cases. The key parameters are the current and destination nodes, unvisited nodes, and distance matrix, with the heuristic's logic embedded in the conditional choice between nearest and farthest nodes.}
                                                                                                                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
